Fix overflows in stream list

--- a/src/app/modules/admin/waiting-screen-editor/waiting-screen-editor.component.scss
+++ b/src/app/modules/admin/waiting-screen-editor/waiting-screen-editor.component.scss
@@ -94,6 +94,7 @@ textarea {
 
 app-announce {
   display: block;
+  overflow: hidden;
 }
 
 .telegram {
